# spicy-regs-rise-analysis

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
docs/: duplicate-detection.md
notebooks/: NamedEntityRecognition.ipynb  RISE_exploration.ipynb  Submission timing.ipynb  Submission_timing.ipynb  Topic modeling.ipynb  brainstorm.md  dupe_detection.ipynb  explore_NER.ipynb
rise_analysis/: __init__.py  duplicates.py  io.py  prep_comments_only_extract.py  text_cleaning.py
src/rise_analysis/: __init__.py  duplicates.py  ner.py  plots.py  prep_comments_only_extract.py  text_cleaning.py  topics.py
tests/: test_duplicates.py  test_io.py  test_ner.py  test_plots.py  test_text_cleaning.py  test_topics.py
