[project]
name = "rise-analysis"
version = "0.1.0"
description = "SpicyRegs analysis of RISE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.4.0",
    "duckdb>=1.5.2",
    "en-core-web-md",
    "loguru>=0.7.3",
    "polars>=1.15.0",
    "scikit-learn>=1.5.0",
    "spacy>=3.8.14",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pip>=26.1.1",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    "notebooks"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv.sources]
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
